Java 21 support and MariaDB as R2DBC driver