@@ -1,16 +1,21 @@
 plugins {
 	id 'java'
 	id 'idea'
-	id 'org.springframework.boot' version '3.1.0'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '3.1.4'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'com.sigursoft'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+}
+
+java {
+	toolchain {
+		languageVersion.set(JavaLanguageVersion.of(21))
+	}
 }
 
 dependencies {
@@ -18,8 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'io.r2dbc:r2dbc-h2'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.mariadb:r2dbc-mariadb'
+
+	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
 	// TESTS
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -31,6 +37,7 @@ dependencies {
 }
 
 test {
+	jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
 	useJUnitPlatform()
 	testLogging.events "passed", "skipped", "failed"
 }
